Chapter 05/terraform/2-tier_vpc/chapter5_demo_vpc_nat_routable.tf
# route table with target as NAT gateway
resource "aws_route_table" "chapter5-demo-nat-gateway-routetable" {
  depends_on = [
    aws_vpc.chapter5-demo-vpc,
    aws_nat_gateway.chapter5-demo-nat-gateway1a,
    #aws_nat_gateway.chapter5-demo-nat-gateway1b,
  ]

  vpc_id = aws_vpc.chapter5-demo-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.chapter5-demo-nat-gateway1a.id
    #gateway_id = aws_nat_gateway.chapter5-demo-nat-gateway1b.id
  }

  tags = {
    Name = "Chapter5 Demo NAT Gateway Route Table "
    CreatedBy = "James Odeyinka",
    DateCreated = "02-25-2023",
    Env = "Demo"
  }
}

# Associate route table to private subnet1a
resource "aws_route_table_association" "associate_routetable_to_private_subnet1a" {
  depends_on = [
    aws_subnet.two-tier-private-subnet-1a,
    aws_route_table.chapter5-demo-nat-gateway-routetable,
  ]
  subnet_id      = aws_subnet.two-tier-private-subnet-1a.id
  route_table_id = aws_route_table.chapter5-demo-nat-gateway-routetable.id
}

# Associate route table to private subnet1b
resource "aws_route_table_association" "associate_routetable_to_private_subnet1b" {
  depends_on = [
    aws_subnet.two-tier-private-subnet-1b,
    aws_route_table.chapter5-demo-nat-gateway-routetable,
  ]
  subnet_id      = aws_subnet.two-tier-private-subnet-1b.id
  route_table_id = aws_route_table.chapter5-demo-nat-gateway-routetable.id
}
